Fix height images on mobile and add class .reverse-on-mobile #5

--- a/themes/plenamata/assets/scss/6-pages/_p-home.scss
+++ b/themes/plenamata/assets/scss/6-pages/_p-home.scss
@@ -45,6 +45,20 @@
         }
     }
 
+    .reverse-on-mobile {
+        @include tablet {
+            flex-direction: column-reverse;
+        }
+    }
+
+    .wp-block-image {
+        img {
+            @include tablet {
+                height: auto;
+            }
+        }
+    }
+
     footer.main-footer {
         margin-top: -380px;
         padding-top: 295px;
